logs/exceptions/exception-24-03-2026.log
2026-03-24 17:32:45 [ERROR]: D:\Projects\BioBrainMdb\utils\exportDB.js:11
const fs = require("fs");
      ^

SyntaxError: Identifier 'fs' has already been declared
    at wrapSafe (node:internal/modules/cjs/loader:1735:18)
    at Module._compile (node:internal/modules/cjs/loader:1778:20)
    at Object..js (node:internal/modules/cjs/loader:1936:10)
    at Module.load (node:internal/modules/cjs/loader:1525:32)
    at Module._load (node:internal/modules/cjs/loader:1327:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
    at Module.require (node:internal/modules/cjs/loader:1548:12)
    at require (node:internal/modules/helpers:152:16)
    at Object.<anonymous> (D:\Projects\BioBrainMdb\controllers\admin\databaseBkupController.js:3:18) {"error":{},"exception":true,"date":"Tue Mar 24 2026 17:32:45 GMT+0530 (India Standard Time)","process":{"pid":10252,"uid":null,"gid":null,"cwd":"D:\\Projects\\BioBrainMdb","execPath":"C:\\Program Files\\nodejs\\node.exe","version":"v24.13.1","argv":["C:\\Program Files\\nodejs\\node.exe","D:\\Projects\\BioBrainMdb\\server.js"],"memoryUsage":{"rss":83169280,"heapTotal":57225216,"heapUsed":25005040,"external":20794333,"arrayBuffers":18265685}},"os":{"loadavg":[0,0,0],"uptime":245844.703},"trace":[{"column":18,"file":"node:internal/modules/cjs/loader","function":"wrapSafe","line":1735,"method":null,"native":false},{"column":20,"file":"node:internal/modules/cjs/loader","function":"Module._compile","line":1778,"method":"_compile","native":false},{"column":10,"file":"node:internal/modules/cjs/loader","function":"Object..js","line":1936,"method":".js","native":false},{"column":32,"file":"node:internal/modules/cjs/loader","function":"Module.load","line":1525,"method":"load","native":false},{"column":12,"file":"node:internal/modules/cjs/loader","function":"Module._load","line":1327,"method":"_load","native":false},{"column":14,"file":"node:diagnostics_channel","function":"TracingChannel.traceSync","line":328,"method":"traceSync","native":false},{"column":24,"file":"node:internal/modules/cjs/loader","function":"wrapModuleLoad","line":245,"method":null,"native":false},{"column":12,"file":"node:internal/modules/cjs/loader","function":"Module.require","line":1548,"method":"require","native":false},{"column":16,"file":"node:internal/modules/helpers","function":"require","line":152,"method":null,"native":false},{"column":18,"file":"D:\\Projects\\BioBrainMdb\\controllers\\admin\\databaseBkupController.js","function":null,"line":3,"method":null,"native":false}]}
2026-03-24 17:34:13 [ERROR]: D:\Projects\BioBrainMdb\utils\exportDB.js:11
const fs = require("fs");
      ^

SyntaxError: Identifier 'fs' has already been declared
    at wrapSafe (node:internal/modules/cjs/loader:1735:18)
    at Module._compile (node:internal/modules/cjs/loader:1778:20)
    at Object..js (node:internal/modules/cjs/loader:1936:10)
    at Module.load (node:internal/modules/cjs/loader:1525:32)
    at Module._load (node:internal/modules/cjs/loader:1327:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
    at Module.require (node:internal/modules/cjs/loader:1548:12)
    at require (node:internal/modules/helpers:152:16)
    at Object.<anonymous> (D:\Projects\BioBrainMdb\controllers\admin\databaseBkupController.js:3:18) {"error":{},"exception":true,"date":"Tue Mar 24 2026 17:34:13 GMT+0530 (India Standard Time)","process":{"pid":9920,"uid":null,"gid":null,"cwd":"D:\\Projects\\BioBrainMdb","execPath":"C:\\Program Files\\nodejs\\node.exe","version":"v24.13.1","argv":["C:\\Program Files\\nodejs\\node.exe","D:\\Projects\\BioBrainMdb\\server.js"],"memoryUsage":{"rss":83709952,"heapTotal":39137280,"heapUsed":26089040,"external":20794333,"arrayBuffers":18265685}},"os":{"loadavg":[0,0,0],"uptime":245932.046},"trace":[{"column":18,"file":"node:internal/modules/cjs/loader","function":"wrapSafe","line":1735,"method":null,"native":false},{"column":20,"file":"node:internal/modules/cjs/loader","function":"Module._compile","line":1778,"method":"_compile","native":false},{"column":10,"file":"node:internal/modules/cjs/loader","function":"Object..js","line":1936,"method":".js","native":false},{"column":32,"file":"node:internal/modules/cjs/loader","function":"Module.load","line":1525,"method":"load","native":false},{"column":12,"file":"node:internal/modules/cjs/loader","function":"Module._load","line":1327,"method":"_load","native":false},{"column":14,"file":"node:diagnostics_channel","function":"TracingChannel.traceSync","line":328,"method":"traceSync","native":false},{"column":24,"file":"node:internal/modules/cjs/loader","function":"wrapModuleLoad","line":245,"method":null,"native":false},{"column":12,"file":"node:internal/modules/cjs/loader","function":"Module.require","line":1548,"method":"require","native":false},{"column":16,"file":"node:internal/modules/helpers","function":"require","line":152,"method":null,"native":false},{"column":18,"file":"D:\\Projects\\BioBrainMdb\\controllers\\admin\\databaseBkupController.js","function":null,"line":3,"method":null,"native":false}]}
2026-03-24 17:34:43 [ERROR]: D:\Projects\BioBrainMdb\utils\exportDB.js:11
const fs = require("fs");
      ^

SyntaxError: Identifier 'fs' has already been declared
    at wrapSafe (node:internal/modules/cjs/loader:1735:18)
    at Module._compile (node:internal/modules/cjs/loader:1778:20)
    at Object..js (node:internal/modules/cjs/loader:1936:10)
    at Module.load (node:internal/modules/cjs/loader:1525:32)
    at Module._load (node:internal/modules/cjs/loader:1327:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
    at Module.require (node:internal/modules/cjs/loader:1548:12)
    at require (node:internal/modules/helpers:152:16)
    at Object.<anonymous> (D:\Projects\BioBrainMdb\controllers\admin\databaseBkupController.js:3:18) {"error":{},"exception":true,"date":"Tue Mar 24 2026 17:34:43 GMT+0530 (India Standard Time)","process":{"pid":14028,"uid":null,"gid":null,"cwd":"D:\\Projects\\BioBrainMdb","execPath":"C:\\Program Files\\nodejs\\node.exe","version":"v24.13.1","argv":["C:\\Program Files\\nodejs\\node.exe","D:\\Projects\\BioBrainMdb\\server.js"],"memoryUsage":{"rss":83783680,"heapTotal":55914496,"heapUsed":26458136,"external":20794333,"arrayBuffers":18265685}},"os":{"loadavg":[0,0,0],"uptime":245962.796},"trace":[{"column":18,"file":"node:internal/modules/cjs/loader","function":"wrapSafe","line":1735,"method":null,"native":false},{"column":20,"file":"node:internal/modules/cjs/loader","function":"Module._compile","line":1778,"method":"_compile","native":false},{"column":10,"file":"node:internal/modules/cjs/loader","function":"Object..js","line":1936,"method":".js","native":false},{"column":32,"file":"node:internal/modules/cjs/loader","function":"Module.load","line":1525,"method":"load","native":false},{"column":12,"file":"node:internal/modules/cjs/loader","function":"Module._load","line":1327,"method":"_load","native":false},{"column":14,"file":"node:diagnostics_channel","function":"TracingChannel.traceSync","line":328,"method":"traceSync","native":false},{"column":24,"file":"node:internal/modules/cjs/loader","function":"wrapModuleLoad","line":245,"method":null,"native":false},{"column":12,"file":"node:internal/modules/cjs/loader","function":"Module.require","line":1548,"method":"require","native":false},{"column":16,"file":"node:internal/modules/helpers","function":"require","line":152,"method":null,"native":false},{"column":18,"file":"D:\\Projects\\BioBrainMdb\\controllers\\admin\\databaseBkupController.js","function":null,"line":3,"method":null,"native":false}]}
